--- a/src/components/collapse/collapse.css
+++ b/src/components/collapse/collapse.css
@@ -11,7 +11,7 @@
 
 .collapse__content--visible {
   opacity: 0;
-  animation-name: opacityIn;
+  animation-name: collapseFadeIn;
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   animation-fill-mode: forwards;
   animation-duration: 300ms;
@@ -20,17 +20,18 @@
 
 .collapse__content--hidden {
   opacity: 1;
-  animation-name: opacityOut;
+  animation-name: collapseFadeOut;
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   animation-fill-mode: forwards;
   animation-duration: 300ms;
   animation-delay: 0ms;
 }
 
-@keyframes opacityIn {
+@keyframes collapseFadeIn {
   from {
     opacity: 0;
     visibility: hidden;
+    border: none;
   }
   to {
     opacity: 1;
@@ -39,7 +40,7 @@
   }
 }
 
-@keyframes opacityOut {
+@keyframes collapseFadeOut {
   from {
     opacity: 1;
     visibility: visible;
